# roombook

./: .dockerignore  .env.app.example  .env.example  .env.nas.example  .gitignore  CHANGELOG.md  Dockerfile.frontend  README.md  app-release.json  docker-compose.app.yml  docker-compose.nas.yml  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260218_01_create_users.py  20260218_02_create_timetables_and_reservations.py  20260218_03_create_reservation_attendees.py  20260218_04_add_reservation_card_fields.py  20260219_01_initial_schema.py  20260309_01_add_department_to_users.py  20260408_01_minutes_fields_and_lock.py  20260409_01_add_rooms_table.py  20260411_01_admin_and_labels.py  20260411_02_user_soft_delete.py  20260411_03_admin_name_cleanup.py  20260412_01_user_ai_quota.py  20260412_02_minutes_live_state.py  20260419_01_global_ai_quota.py  20260419_02_global_ai_quota_limit_to_5.py  20260420_01_ai_usage_precision_to_6.py  20260422_01_remove_legacy_default_labels.py  20260422_02_add_other_notes_to_reservations.py  20260426_02_removed_label_color_marker.py  20260426_03_add_reservation_label_visibility.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  release.py  settings.py
backend/scripts/: seed_users.py
backend/tests/: __init__.py  conftest.py  test_ai_service.py  test_auth.py  test_labels.py  test_main.py  test_release.py  test_reservation.py  test_reservation_events.py  test_seed_users.py  test_users_admin_create.py  test_users_admin_delete.py  test_users_ai_usage.py  test_users_search.py
src/: App.tsx  (+3 more)
(+100 files in other folders)
